--- a/Snake Game/CapaNegocio/CapaNegocio.csproj
+++ b/Snake Game/CapaNegocio/CapaNegocio.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Login.cs" />
+    <Compile Include="Login_XML.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
