--- a/Snake Game/Objetos/Objetos.csproj
+++ b/Snake Game/Objetos/Objetos.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8EA2A693-170F-4719-8A29-2AABA1D5DC20}</ProjectGuid>
+    <ProjectGuid>{96EF58F5-7813-4613-AEF9-A5346D5AD1E9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CapaDatos</RootNamespace>
-    <AssemblyName>CapaDatos</AssemblyName>
+    <RootNamespace>Objetos</RootNamespace>
+    <AssemblyName>Objetos</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,15 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="XML.cs" />
+    <Compile Include="Record.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XML_DatosJuegos.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Objetos\Objetos.csproj">
-      <Project>{96ef58f5-7813-4613-aef9-a5346d5ad1e9}</Project>
-      <Name>Objetos</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
