--- a/Snake Game/Ventana_Juego/Ventana_Juego.csproj
+++ b/Snake Game/Ventana_Juego/Ventana_Juego.csproj
@@ -58,6 +58,12 @@
     </Compile>
     <Compile Include="objeto.cs" />
     <Compile Include="Obstaculos.cs" />
+    <Compile Include="Pasado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Pasado.Designer.cs">
+      <DependentUpon>Pasado.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Records_Top.cs">
       <SubType>Form</SubType>
@@ -67,6 +73,9 @@
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pasado.resx">
+      <DependentUpon>Pasado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
