--- a/Snake Game/Ventana_Juego/Ventana_Juego.csproj
+++ b/Snake Game/Ventana_Juego/Ventana_Juego.csproj
@@ -35,8 +35,12 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Bunifu_UI_v1.52">
+      <HintPath>D:\Datos Importantes\Bunifu_UI_v1.52.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -130,6 +134,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Gift_50px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Delete_64px.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
