--- a/Snake Game/Ventana_Juego/Ventana_Juego.csproj
+++ b/Snake Game/Ventana_Juego/Ventana_Juego.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Bunifu_UI_v1.52">
-      <HintPath>D:\Datos Importantes\Bunifu_UI_v1.52.dll</HintPath>
+      <HintPath>..\Login\bin\Debug\Bunifu_UI_v1.52.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
